WIP: fixed hover on mobile. working on fixing page state change

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@
   }
 
   footer {
-    @apply bg-gray-900 w-full h-min p-3 text-zinc-50;
+    @apply bg-gray-900 w-full h-min p-3 text-zinc-50 lg:absolute bottom-0 left-0 lg:w-min lg:m-auto border-2;
   }
 }
 
